--- a/web/templates/topic/show.html.eex
+++ b/web/templates/topic/show.html.eex
@@ -2,6 +2,8 @@
 <div class="input_field">
   <textarea class="materialize-textarea"></textarea>
   <button class="btn">Add Comment</button>
+  <ul class="collection">
+  </ul>
 </div>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
